# Raspberry_pi

./: .dockerignore  .env.sample  .gitignore  7_segment_display_controll.py  Dockerfile  README.md  display_controll.py  docker-compose.yml  img.pmg  led_controll.py  servo_controll.py  start_display.sh  start_pi.sh  start_pi1.sh  start_pi2.sh  test.txt
.github/workflows/: linter.yaml
ANPR/: ANPR_on_video.py  license_plate_recognition.py  requirements.txt  setup.cfg
ANPR/anpr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ANPR/src/anpr/: license_plate_recognition.py
anpr/: requirements.txt  setup.cfg  take_image.sh  tox.ini
anpr/src/anpr/: anpr_on_video.py  easy_ocr.py  google_vision_ocr.py  license_plate_recognition.py  motion_detection.py  ocr.py
anpr/src/anpr/ocr/: __init__.py  easy_ocr.py  google_vision_ocr.py  ocr.py
docker/: run.sh
src/: led_control.py  main.py  servo_controll.py  udms_control.py
src/entrance_system/: camera_control.py  entrance_system.py  logger.py  main1.py  main2.py  main_pi1.py  main_pi2.py  servo_control.py  take_image.sh  udms_control.py
src/models/: reservation.py
src/parking_lot_system/: 7_segment_display_control.py  display_control.py  garage.py  led_control.py  logger.py  main.py  main_pi1.py  main_pi2.py  make_request.sh  reservation.py  udms_control.py
udms/: test_udms.py
