[metadata]
name = anpr
version = 0.0
description = My package description
license = BSD 3-Clause License

[options]
zip_safe = False
packages = find:
install_requires =
    opencv-contrib-python>=4
    numpy>=1.22
    easyocr>=1.6
    google>=3.0.0
    imutils>=0.5.4
    scikit-image>=0.19.3

[options.packages.find]
exclude =
    anpr.parkeergarage-c76e9940c139.json