[metadata]
name = anpr
version = 0.0
description = My package description
license = BSD 3-Clause License

[options]
zip_safe = False
packages = 
    anpr
install_requires =
    opencv-contrib-python>=4
    easyocr>=1.6
    google-cloud-vision>=3.1.4
package_dir = 
    =src

[options.packages.find]
exclude =
    anpr.parkeergarage-c76e9940c139.json